--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -112,7 +112,9 @@
                         android:id="@+id/recyclerViewAuctions"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:nestedScrollingEnabled="false" />
+                        android:minHeight="200dp"
+                        android:scrollbars="vertical"
+                        android:overScrollMode="never" />
 
                 </LinearLayout>
 
