--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -15,6 +15,12 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_my_auctions"
+        android:title="Bài đăng của tôi"
+        android:icon="@drawable/ic_inventory"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_settings"
         android:title="Cài đặt"
         android:icon="@drawable/ic_settings"
