Update: fixbug chat personal

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -23,6 +23,7 @@
 
     <!-- Container cho conversation list với background đẹp -->
     <androidx.cardview.widget.CardView
+        android:id="@+id/conversationContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="16dp"
@@ -33,9 +34,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
 
-        <fragment
+        <FrameLayout
             android:id="@+id/frag_conversation_list"
-            android:name="com.zegocloud.zimkit.components.conversation.ui.ZIMKitConversationFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
